# rec0-python

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: publish.yml  tests.yml
docs/: api_reference.md  examples.md  quickstart.md
examples/: basic_usage.py  chatbot.py  rag_pipeline.py
src/rec0/: __init__.py  client.py  exceptions.py  init.py  version.py
tests/: init.py  test_client.py  test_integration.py
