[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memorylayer-py"
version = "1.0.0"
description = "Official Python SDK for rec0 - Memory API for AI apps"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Yash Patel", email = "ycpatel1029@gmail.com" }
]
license = { text = "MIT" }
keywords = ["ai", "memory", "sdk", "rec0", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "requests>=2.28.0",
]

[project.urls]
Homepage = "https://rec0.vercel.app"
Documentation = "https://rec0.vercel.app/docs"
Repository = "https://github.com/patelyash2511/rec0-python"
Issues = "https://github.com/patelyash2511/rec0-python/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: integration tests that require external API credentials",
]
