[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memorylayer-py"
version = "0.1.1"
description = "Privacy-first memory API for LLMs"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "rec0", email = "support@rec0.vercel.app" }
]
license = { text = "MIT" }
keywords = ["ai", "memory", "sdk", "rec0", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "requests>=2.28.0",
  "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=22.0.0",
  "mypy>=0.950",
]

[project.urls]
Homepage = "https://rec0.vercel.app"
Documentation = "https://rec0.vercel.app/docs"
Repository = "https://github.com/patelyash2511/rec0-python"
"Bug Tracker" = "https://github.com/patelyash2511/rec0-python/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: integration tests that require external API credentials",
]
